# ESP32-S3-DualEye-Touch-LCD-1.28

./: ReadMe.md
Arduino/examples/LVGL_Arduino/: BAT_Driver.cpp  BAT_Driver.h  Button_Driver.cpp  Button_Driver.h  I2S_Driver.cpp  LCD_Driver.cpp  LCD_Driver.h  LVGL_Arduino.ino  LVGL_Driver.cpp  LVGL_Driver.h  LVGL_Example.cpp  LVGL_Example.h  LVGL_Music.cpp  LVGL_Music.h  Simulated_Gesture.cpp  Simulated_Gesture.h  Wireless.cpp
Arduino/examples/LVGL_Arduino-Touch/: Board_Configuration.h  Display_GC9A01.cpp  LCD_Driver.cpp  LCD_Driver.h  LVGL_Arduino_Touch.ino  LVGL_Driver.cpp  LVGL_Driver.h  LVGL_Example.h  MIC_MSM.h  SD_Card.cpp  SD_Card.h  Touch_CST816.h  Touch_Driver.cpp
Arduino/examples/LVGL_Arduino-Touch-Half-A/: Display_GC9A01.cpp  I2C_Driver.h  I2S_Driver.h  LCD_Driver.cpp  LVGL_Driver.h  LVGL_Example.cpp  LVGL_Music.h  MIC_MSM.h  Touch_Driver.cpp
Arduino/examples/LVGL_Arduino-Touch-Half-B/: Display_GC9A01.cpp  Display_GC9A01.h  LVGL_Driver.cpp  LVGL_Example.cpp  LVGL_Example.h  Peripheral_Driver.cpp  Peripheral_Driver.h  ReadMe.txt  SD_Card.h  Touch_CST816.cpp
Arduino/examples/LVGL_Arduino_Touch-Half-A/: Audio_ES8311.h  Display_GC9A01.h  I2C_Driver.cpp  MIC_MSM.cpp  Touch_CST816.cpp  Touch_CST816.h  esp_lcd_gc9a01.c
ESP-IDF/: ReadMe.txt
ESP-IDF/01_Text_Number/: sdkconfig  sdkconfig.old
ESP-IDF/01_Text_Number/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
ESP-IDF/01_Text_Number/main/LCD_Driver/: LCD_Driver.c
ESP-IDF/01_Text_Number/main/LVGL_Driver/: LVGL_Driver.c
ESP-IDF/01_Text_Number/main/LVGL_UI/: Text_Number.c  Text_Number.h
ESP-IDF/02_Shapes_on_Circular/: sdkconfig
ESP-IDF/03_Animated_Eye1/: sdkconfig  sdkconfig.defaults  sdkconfig.old
ESP-IDF/04_SD_gif_show/: sdkconfig  sdkconfig.old
ESP-IDF/05_Clock/: CMakeLists.txt  sdkconfig
ESP-IDF/06_Music_Player/: CMakeLists.txt  sdkconfig.old
ESP-IDF/06_Music_Player_Touch/: sdkconfig
ESP-IDF/07_Music_Player_Touch/main/: CMakeLists.txt  idf_component.yml
ESP-IDF/07_Music_Player_Touch/main/I2S_Driver/: I2S_Driver.h
ESP-IDF/07_Music_Player_Touch/main/LVGL_Driver/: LVGL_Driver.h
ESP-IDF/07_Music_Player_Touch/main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h
Firmware/: ReadMe.txt
(+101 files in other folders)
